feat(ims-server):forget password, jwt class need to be fixed
