# apps/ims-server/src/user/controllers/ForgetPasswordController.ts
@@ -10,7 +10,12 @@ import {
 } from "tsoa";
 
 import type { Request as ExpressRequestType, Response } from "express";
-import { AuthError, authErrorMapping, RefreshTokenCookie } from "@khaled/auth";
+import {
+  AuthError,
+  authErrorMapping,
+  OtpHandler,
+  RefreshTokenCookie,
+} from "@khaled/auth";
 import { errorMapper, InputValidationError } from "@khaled/error-handler";
 
 import { config } from "../../config/envSchema.js";
@@ -20,36 +25,91 @@ import { validateZodSchemaMiddleware } from "../../core/schema/validateZodErrorM
 import { zodErrorSerializer } from "../../core/schema/ZodErrorSerializer.js";
 import {
   forgetPasswordRequestOtpSchema,
+  forgetPasswordVerifyOtpSchema,
   loginBodySchema,
   registerBodySchema,
+  resetForgettenPasswordBodySchema,
+  type ResetForgettenPasswordInput,
 } from "@khaled/ims-shared";
 import { forgetPasswordWithOtp } from "../services/forgetPasswordWithOtp.js";
+import { OtpType } from "../../../generated/prisma/index.js";
 
 @Tags("forget-password")
 @Route("forget-password")
 export class ForgetPasswordController extends Controller {
+  private forgetPasswordService: OtpHandler<
+    OtpType,
+    {
+      newPassword: string;
+    }
+  >;
   constructor() {
     super();
+    this.forgetPasswordService = forgetPasswordWithOtp();
   }
 
   @Middlewares([validateZodSchemaMiddleware(forgetPasswordRequestOtpSchema)])
   @Post("request-otp")
-  @SuccessResponse("201", "Created")
   public async requestOtpForForgetPassword(
     @Body()
-    body: {
+    {
+      identifier,
+    }: {
       identifier: { type: "email" | "phone"; value: string }; //this will be added by zod
     },
     @Request() req: ExpressRequestType
   ) {
-    const forgetPassword = forgetPasswordWithOtp({
-      identifierType: body.identifier.type,
-    });
     try {
-      const token = await forgetPassword.request({
-        identifier: body.identifier.value,
+      const token = await this.forgetPasswordService.request({
+        identifier: identifier.value,
+        senderType: identifier.type === "email" ? "email" : "sms",
       });
       return token;
+    } catch (error) {
+      if (error instanceof AuthError) {
+        throw errorMapper(error, authErrorMapping);
+      }
+
+      throw error;
+    }
+  }
+
+  @Middlewares([validateZodSchemaMiddleware(forgetPasswordVerifyOtpSchema)])
+  @Post("verify-otp")
+  public async verifyOtpForForgetPassword(
+    @Body()
+    {
+      otp,
+    }: {
+      otp: string;
+    },
+    @Request() req: ExpressRequestType
+  ) {
+    const token = req.headers["authorization"]?.replace("Bearer ", "") || "";
+    try {
+      return await this.forgetPasswordService.verify({ otp, token });
+    } catch (error) {
+      if (error instanceof AuthError) {
+        throw errorMapper(error, authErrorMapping);
+      }
+
+      throw error;
+    }
+  }
+
+  @Middlewares([validateZodSchemaMiddleware(resetForgettenPasswordBodySchema)])
+  @Post("reset")
+  public async resetForgettenPassword(
+    @Body()
+    { newPassword }: ResetForgettenPasswordInput,
+    @Request() req: ExpressRequestType
+  ) {
+    const token = req.headers["authorization"]?.replace("Bearer ", "") || "";
+    try {
+      return await this.forgetPasswordService.execute({
+        data: { newPassword },
+        token,
+      });
     } catch (error) {
       if (error instanceof AuthError) {
         throw errorMapper(error, authErrorMapping);
